--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
     "main": "server.js",
     "scripts": {
       "start": "node server.js",
-      "dev": "nodemon server.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "dev": "nodemon server.js"
     },
     "dependencies": {
       "express": "^4.18.2",
@@ -18,8 +17,5 @@
     },
     "devDependencies": {
       "nodemon": "^3.0.1"
-    },
-    "keywords": ["hotel", "booking", "mongodb", "express"],
-    "author": "Your Name",
-    "license": "MIT"
+    }
   }
